--- a/STAT331_Project.qmd
+++ b/STAT331_Project.qmd
@@ -156,4 +156,25 @@ According to the fitted linear model above, for every one point increase in the 
 
 ```{r}
 #Create table
+library(kableExtra)
+
+response_variance <- var(data_by_country$happiness)
+fitted_values <- predict(data_lm)
+fitted_variance <- var(fitted_values)
+residuals <- residuals(data_lm)
+residual_variance <- var(residuals)
+
+variance_table <- data.frame(
+  Metric = c("Variance in Response Values", "Variance in Fitted Values", "Variance in Residuals"),
+  Variance = c(response_variance, fitted_variance, residual_variance)
+)
+
+variance_table %>%
+  kable() %>%
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed"))
+
 ```
+
+**Interpreting the variability**
+
+From the regression summary, the R2 value is approximately 0.5066, which means that 50.66% of the variability in happiness score is explained by the corruption scores. This moderate R2 value indicates that while corruption is an important factor in deciding happiness score, other variables such as social, economic or politcal factors likely play a signifigant role as well. The table of variances is in agreement with the R2 value, illustrating that the remaining variance points to the influence of other factors, suggesting a moderate model fit
