--- a/STAT331_Project.qmd
+++ b/STAT331_Project.qmd
@@ -95,9 +95,9 @@ hs_vs_cpi_plot <- ggplot(data = data,
   geom_point() +
   geom_smooth(method = "lm") +
   labs(title = "Relationship Between Various Countries' Happiness Scores and CPI",
-       subtitle = "Average Happiness Score",
+       subtitle = "Average Happiness Score (Out of 100)",
        y = "",
-       x = "Corruption Perception Index") +
+       x = "Corruption Perception Index Score (Out of 100)") +
   theme_bw()
 
 hs_vs_cpi_plot
@@ -112,9 +112,9 @@ animated_plot <- ggplot(data, aes(x = corruption,
   geom_point(aes(color = year)) +
   geom_smooth(method = "lm", aes(color = year)) +
   labs(title = "Relationship Between Various Country's Happiness Scores and CPI",
-       subtitle = "Average Happiness Score",
+       subtitle = "Average Happiness Score (Out of 100)",
        y = "",
-       x = "Corruption Perception Index") +
+       x = "Corruption Perception Index Score (Out of 100)") +
   theme_bw() +
   transition_states(year,
                     transition_length = 2,
@@ -134,13 +134,33 @@ We will now conduct a statistical method known as *Linear Regression* to assess 
 
 To perform linear regression, we want to have only one x-value and one y-value for each of our countries. To do this, we will take the mean value for both average happiness score and CPI score for each country across all the years in our dataset (2012-2017). We chose this method of obtaining one x and y value for each of our countries because we felt it was the method that most represented all the observations in the full dataset, especially because there was not much change in the relationship between our variables over the years as observed in the animated plot in the last section.
 
+Below is a new plot visualizing the relationship between average happiness score and average CPI score for each country across the years 2012 through 2017. This will be the data we use in fitting our linear regression model.
+
 ```{r}
-#| results: hide
 data_by_country <- data |>
   group_by(country) |>
   summarise(happiness = mean(happiness),
             corruption = mean(corruption))
 
+ggplot(data = data_by_country,
+       mapping = aes(x = corruption,
+                     y = happiness)) +
+  geom_point() +
+  geom_smooth(method = "lm") +
+  labs(title = 
+         "Relationship Between Various Countries' Happiness Scores and CPI",
+       subtitle = "Average Happiness Score (Out of 100) Between 2012-2017",
+       y = "",
+       x = "Average Corruption Perception Index Score (Out of 100) Between 2012-2017") +
+  theme_bw() +
+  geom_text(data = subset(data_by_country, country %in% c("USA", "Sweden", "Haiti", "UAE",
+                                                          "Brazil")),
+            aes(label = country),
+            vjust = -1, size = 3, check_overlap = TRUE)
+```
+
+```{r}
+#| results: hide
 data_lm <- lm(happiness ~ corruption, 
               data = data_by_country)
 summary(data_lm)
@@ -148,11 +168,11 @@ summary(data_lm)
 
 After fitting a simple linear model between the average happiness score across the years 2012 through 2017 for each country versus the average CPI score across the years 2012 through 2017 for each country in our dataset, we have obtained our estimated regression equation below:
 
-$$\hat{y} = 0.40679x + 36.03181$$
+$$\hat{y} = 0.407x + 36.032$$
 
 **Interpreting Our Coefficients**
 
-According to the fitted linear model above, for every one point increase in the CPI score for a country, the country's mean increase in average happiness score will be about 0.40679 points. Furthermore, if a country's CPI score is 0, meaning they are extremely corrupt, their mean happiness score will be 36.03181 on average, which is a relatively low happiness score. Our intercept does make sense in this context, as it is technically possible for a country to have a CPI score of 0.
+According to the fitted linear model above, for every one point increase in the CPI score for a country, the country's mean increase in average happiness score will be about 0.407 points. Furthermore, if a country's CPI score is 0, meaning they are extremely corrupt, their mean happiness score will be about 36.032 on average, which is a relatively low happiness score. Our intercept does make sense in this context, as it is technically possible for a country to have a CPI score of 0.
 
 ## Model Fit
 
@@ -175,4 +195,4 @@ variance_table |>
 
 **Interpreting the variability**
 
-From the regression summary, the $R^2$ value is approximately 0.5066, which means that 50.66% of the variability in a nation's average happiness score is explained by their CPI score. This moderate $R^2$ value indicates that while CPI is an important factor in predicting happiness score, other variables such as social, economic, or political influences likely play a significant role as well. The table of variances is in agreement with our $R^2$ value, illustrating that the remaining variance is explained by the residuals and points to the influence of factors not included in our model, suggesting a moderate model fit.
+From the regression summary, the $R^2$ value is approximately 0.5066, which means that 50.66% of the variability in a nation's average happiness score is explained by their CPI score. This moderate $R^2$ value indicates that while CPI is an important factor in predicting happiness score, other variables such as social, economic, or political influences likely play a significant role as well. The table of variances is in agreement with our $R^2$ value, showing that about half of the variability is left unexplained by the fitted values, illustrating that the remaining variance is explained by the residuals and points to the influence of factors not included in our model, suggesting a moderate model fit. Some of the variance in the residuals may be explained by factors such as political freedoms and standards of living, but these extrapolations are outside the scope of this research paper.
